--- a/PizzaParty/app/src/main/res/layout/activity_main.xml
+++ b/PizzaParty/app/src/main/res/layout/activity_main.xml
@@ -10,14 +10,15 @@
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
     android:paddingTop="16dp"
+    android:background="@drawable/pizza_background"
     tools:context="com.zybooks.pizzaparty.MainActivity">
 
-<!--Text "Number of people" -->
+<!--Text "Number of people"24sp -->
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Number of people?"
-        android:textSize="24sp"
+        android:text="@string/number_of_people"
+        android:textSize="@dimen/label_text_size"
         android:labelFor="@id/num_attend_edit_text" />
 
     <!-- Editable textbox for number of people-->
@@ -28,14 +29,14 @@
         android:inputType="number"
         android:ems="5"
         android:importantForAutofill="no"
-        android:hint="10" />
+        android:hint="@string/_10" />
 
     <!-- Text "How hungry"-->
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="How hungry?"
+        android:text="@string/how_hungry"
         android:textSize="24sp"
         android:labelFor="@id/hungry_radio_group" />
 
@@ -48,20 +49,20 @@
         <!-- Radio button for Light is below-->
         <RadioButton
             android:id="@+id/light_radio_button"
-            android:text="Light"
+            android:text="@string/light"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <!-- Radio button for Medium is below-->
         <RadioButton
             android:id="@+id/medium_radio_button"
-            android:text="Medium"
+            android:text="@string/medium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:checked="true" />
         <!-- Radio button for Ravenous is below-->
         <RadioButton
             android:id="@+id/ravenous_radio_button"
-            android:text="Ravenous"
+            android:text="@string/ravenous"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </RadioGroup>
@@ -69,7 +70,7 @@
     <!-- Text "Total pizzas"-->
     <TextView
         android:id="@+id/num_pizzas_text_view"
-        android:text="Total pizzas: ?"
+        android:text="@string/total_pizzas"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
@@ -78,7 +79,8 @@
     <!-- calculate button-->
     <Button
         android:id="@+id/calc_button"
-        android:text="Calculate"
+        android:text="@string/calculate"
+        style="@style/CalcButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
