--- a/PizzaParty/app/src/main/res/values/colors.xml
+++ b/PizzaParty/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="my_green">#11BB11</color>
+    <color name="gray">#AAA</color>
 </resources>
