--- a/PizzaParty/app/src/main/res/values/themes.xml
+++ b/PizzaParty/app/src/main/res/values/themes.xml
@@ -1,4 +1,5 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
+    <!--This file contains themes used throughout the app's UI.-->
     <!-- Base application theme. -->
     <style name="Theme.PizzaParty" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
