--- a/PizzaParty/app/src/main/res/values/colors.xml
+++ b/PizzaParty/app/src/main/res/values/colors.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--This file contains color values used throughout the app's design. -->
+<!--This file contains color values used throughout the design of app -->
 <resources>
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
